--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.8",
     "simplelightbox": "^2.14.3"
   },
   "devDependencies": {
